Fixed some issues regarding overflow on the question list and also gave the text more with on start and end evaluation screens

--- a/front-end/src/components/endEvalComponent/endEvalComponent.css
+++ b/front-end/src/components/endEvalComponent/endEvalComponent.css
@@ -25,7 +25,7 @@
 .end-eval-component-text {
     font-size: 2rem;
     text-align: left;
-    width: 10%;
+    width: 30%;
     margin: 1rem;
 }
 
