--- a/front-end/src/components/questionsList/questionList.css
+++ b/front-end/src/components/questionsList/questionList.css
@@ -8,7 +8,7 @@
     width: 80vw;
     height: 80vh;
     background-color: #d6d6d6;
-    overflow: hidden;
+    overflow-y: auto;
     margin: auto;
 }
 
