--- a/front-end/src/components/startEvalContent/startEvalContent.css
+++ b/front-end/src/components/startEvalContent/startEvalContent.css
@@ -24,7 +24,7 @@
 .start-eval-content-text{
     font-size: 2rem;
     text-align: left;
-    width: 10%;
+    width: 30%;
     margin: 1rem;
 }
 
